# website-csiejar

./: .breakpoints  README.md  mail.py  main.py  pyproject.toml  sqlite.py
dead_storage/: login_modal.js
server_data/: client_secret_463794153045-oaatiueehd89im9ft3s1uhdge0d6ebnb.apps.googleusercontent.com.json
sqlite/: csiejar.db  test.db
static/: ajax.js  changeColor.js  script.js
static/css/: article_page.css  contentStyle.css  headStyle.css  iconStyle.css  menuStyle.css  style.css  topnav.css
static/data/: CAPTCHA.json  ID_and_google.json  article_data.json  backupPages.json  basicData.json  editCommentData.json  editKey.json  fast_link.json  pages.json  permission.json  server.json  signup_auth.json
static/editData/: editMode.js  lock.css  style.css  uiBtn.js  unlock.js
static/script/: apis.js  article.js  article_create.js  article_edit.js  error_modal.js  home.js  login.js  login_modal.js  manager.js  news.js  unlogin_modal.js
templates/: article.html  article_create.html  article_edit.html  article_page.html  calendar.html  change_password.html  classData.html  curriculum.html  curriculum1_2.html  edit.html  editPage.html  editPageHint.html  forget_change_password.html  forget_password.html  home.html  index.html  login.html  manager.html  news.html  noPage.html  other.html  resource.html  resourseLink.html  send_mail_success.html  signup_fail.html  signup_success.html  test.html
test/: main.py
流程圖/: readme.md
