[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.1.2"
numpy = "^1.22.2"
python = "^3.8"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
